--- a/languages/easy-slider-fr_FR.po
+++ b/languages/easy-slider-fr_FR.po
@@ -10,7 +10,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "POT-Creation-Date: 2021-02-07T22:02:21+01:00\n"
-"PO-Revision-Date: 2021-02-07 22:00+0000\n"
+"PO-Revision-Date: 2021-02-08 18:28+0000\n"
 "X-Generator: Loco https://localise.biz/\n"
 "X-Domain: easy-slider\n"
 "Language: fr_FR\n"
@@ -78,17 +78,16 @@ msgstr "Supprimer"
 msgid "Easy Slider"
 msgstr "Easy Slider"
 
+#. Description of the plugin
+msgid ""
+"Easy Slider makes it easy to add sliders to any page through shortcodes."
+msgstr ""
+"Easy Slider facilite l'ajout de sliders sur n'importe quelle page via des "
+"shortcodes."
+
 #: admin/partials/sliders-list-view.php:67
 msgid "Edit"
 msgstr "Editer"
-
-#. Author URI of the plugin
-msgid "http://example.com/"
-msgstr ""
-
-#. Plugin URI of the plugin
-msgid "http://example.com/plugin-name-uri/"
-msgstr ""
 
 #: admin/partials/slider-form-view.php:126
 msgid "Image width:"
@@ -159,7 +158,6 @@ msgid "Slider picture:"
 msgstr "Image du Slider :"
 
 #: admin/partials/sliders-list-view.php:30
-#, fuzzy
 #| msgid "Slider list"
 msgid "Sliders list"
 msgstr "Liste des sliders"
@@ -171,12 +169,6 @@ msgstr "Slideshow"
 #: admin/partials/slider-form-view.php:89
 msgid "Slideshow speed:"
 msgstr "Vitesse du slideshow :"
-
-#. Description of the plugin
-msgid ""
-"This is a short description of what the plugin does. It's displayed in the "
-"WordPress admin area."
-msgstr ""
 
 #: admin/partials/slider-form-view.php:155
 msgid "Thumbnails"
